--- a/style.css
+++ b/style.css
@@ -17,15 +17,19 @@
 .theme-light {
     --color-primary:#f4f4f5;
     --color-secondary: #a1a1aa;
+    --color-secondary-a: #a1a1aaaa;
     --color-accent: #e4e4e7;
     --font-color: #09090b;
+    --theme-image: url(images/moon.png)
   }
 
 .theme-dark {
     --color-primary: #18181b;
     --color-secondary: #27272a;
+    --color-secondary-a: #27272aaa;
     --color-accent: #3f3f46;
     --font-color: #ffffff;
+    --theme-image: url(images/sun.png)
   }
 
 .preheader {
@@ -41,6 +45,7 @@
     background-color: var(--color-primary);
     background-position: center center;
     background-size: contain;
+    background-image: var(--theme-image);
     transition:1s;
 }
 
@@ -82,7 +87,6 @@ body {
     font-size: 30px;
     width:500px;
     height:500px;
-    background-color: var(--color-primary);
     border-radius: 0 25px 25px 25px;
 }
 
@@ -154,6 +158,7 @@ span {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: var(--color-secondary);
 }
 
 .displaybtn {
@@ -161,7 +166,7 @@ span {
 }
 
 .displaybtn:hover {
-    border-top: 4px solid var(--color-secondary)
+    border-top: 4px solid rgba(0,0,0,0)
 }
 
 .row {
@@ -197,11 +202,18 @@ input[type=radio] {
     background-color: var(--color-primary);
     color:var(--font-color);
     display: grid;
+    border:1px solid var(--font-color);
     grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
 }
 
 #boardDisplay > * {
-    border:1px solid var(--font-color)
+    border:1px solid var(--font-color);
+    font-size: 150px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    font-family: titlefont;
+    overflow: hidden;
 }
 
 #boardDisplay>*:hover {
